# audio-analyzer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  output.json  pyproject.toml  stderr.txt  stderr_debug.txt
.github/workflows/: ci.yml
src/audio_analyzer/: main.py
src/audio_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bpm_detection.py  test_cli_accuracy.py  test_error_handling.py  test_key_detection.py  test_unit.py
