[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-analyzer"
version = "0.1.0"
description = "A GPL-licensed CLI tool for audio analysis using Essentia and Librosa"
readme = "README.md"
authors = [{ name = "WaxLogic Utility", email = "utility@example.com" }]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "numpy>=1.20.0",
    "librosa>=0.10.0",
    "essentia>=2.0.1",
]

[project.scripts]
audio-analyzer = "audio_analyzer.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
